-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.2.0 Beta1
-
None
-
886c359ebb86afcad3a62ce6cf7697fd7d6a1ea8
I am attempting to build Qt5 git on Linux for Android, following the instructions at http://qt-project.org/wiki/Qt5ForAndroidBuilding. I am using the adt-bundle-linux-x86_64-20130917 Android SDK (22.2.1) and the android-ndk-r9. Building with gcc 4.8. My configure line is
./configure -developer-build -xplatform android-g++ -nomake tests -nomake examples -android-ndk /home/android-qt/android-ndk-r9 -android-sdk /home/android-qt/adt-bundle-linux-x86_64-20130917/sdk/ -android-ndk- host linux-x86_64 -android-toolchain-version 4.8 -skip qttranslations -skip qtwebkit -skip qtserialport -skip qtwebkit-examples
This configuration builds Qt 5.1.1 successfully if I checkout the v5.1.1.
But if I attempt to build the default git (stable branch, 5.2.0, last commit 728cd2e1737544c6236c9c9acfb502381c598149), I get the following error in qt5/qtdeclarative/src/qml:
/home/android-qt/android-ndk-r9/toolchains/arm-linux-androideabi-4.8/prebuilt/linux-x86_64/bin/arm-linux-androideabi-g++ -c -Wno-psabi -march=armv7-a -mfloat-abi=softfp -mfpu=vfp -ffunction-sections -funwind-tables -fstack-protector -fno-short-enums -DANDROID -Wa,--noexecstack -std=gnu++0x -Werror -Wno-error=cpp -Wno-error=deprecated-declarations -Wno-error=strict-overflow -Wno-error=literal-suffix -g -g -gdwarf-2 -marm -O0 -fno-omit-frame-pointer -Wno-psabi -fvisibility=hidden -fvisibility-inlines-hidden -D_REENTRANT -fPIC -DQT_NO_PRINTER -DQT_NO_PRINTDIALOG -DQT_NO_LIBUDEV -DQT_NO_XCB -DQT_NO_XKBCOMMON -DQT_NO_URL_CAST_FROM_STRING -DQT_NO_INTEGER_EVENT_COORDINATES -DQT_BUILD_QML_LIB -DQT_BUILDING_QT -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT_MOC_COMPAT -DQT_USE_QSTRINGBUILDER -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_BEFORE=0x050000 -DV4_ENABLE_JIT -DENABLE_YARR_JIT=1 -DWTF_CPU_ARM_THUMB2 -DWTF_EXPORT_PRIVATE= -DJS_EXPORT_PRIVATE= -DENABLE_LLINT=0 -DENABLE_DFG_JIT=0 -DENABLE_DFG_JIT_UTILITY_METHODS=1 -DENABLE_JIT_CONSTANT_BLINDING=0 -DENABLE_ASSEMBLER=1 -DBUILDING_QT__ -DENABLE_JIT=1 -DWTF_USE_UDIS86=0 -DV4_CXX_ABI_EXCEPTION -DQT_NETWORK_LIB -DQT_CORE_LIB -I/home/android-qt/qt5/qtbase/mkspecs/android-g++ -I. -I/home/android-qt/qt5/qtbase/include -I/home/android-qt/qt5/qtbase/include/QtQml -I/home/android-qt/qt5/qtbase/include/QtQml/5.2.0 -I/home/android-qt/qt5/qtbase/include/QtQml/5.2.0/QtQml -I../3rdparty/masm/jit -I../3rdparty/masm/assembler -I../3rdparty/masm/runtime -I../3rdparty/masm/wtf -I../3rdparty/masm/stubs -I../3rdparty/masm/stubs/wtf -I../3rdparty/masm -I../3rdparty/masm/disassembler -I../3rdparty/masm/disassembler/udis86 -Icompiler -I. -Ijsruntime -I. -I../3rdparty/double-conversion -Ianimations -I/home/drew/projects/android-qt/qt5/qtbase/include/QtNetwork -I/home/android-qt/qt5/qtbase/include/QtCore -I/home/android-qt/qt5/qtbase/include/QtCore/5.2.0 -I/home/android-qt/qt5/qtbase/include/QtCore/5.2.0/QtCore -I.moc/debug-shared -I/home/android-qt/android-ndk-r9/sources/cxx-stl/gnu-libstdc++/4.8/include -I/home/android-qt/android-ndk-r9/sources/cxx-stl/gnu-libstdc++/4.8/libs/armeabi-v7a/include -I/home/android-qt/android-ndk-r9/platforms/android-9/arch-arm/usr/include -o .obj/debug-shared/qv4regalloc.o compiler/qv4regalloc.cpp In file included from /home/android-qt/qt5/qtbase/include/QtQml/5.2.0/QtQml/private/qv4value_def_p.h:1:0, from /home/android-qt/qt5/qtbase/include/QtQml/5.2.0/QtQml/private/../../../../../../qtdeclarative/src/qml/compiler/qv4compileddata_p.h:48, from /home/android-qt/qt5/qtbase/include/QtQml/5.2.0/QtQml/private/qv4compileddata_p.h:1, from compiler/qv4isel_p.h:47, from compiler/qv4regalloc_p.h:45, from compiler/qv4regalloc.cpp:42: /home/android-qt/qt5/qtbase/include/QtQml/5.2.0/QtQml/private/../../../../../../qtdeclarative/src/qml/jsruntime/qv4value_def_p.h:245:17: error: inline function 'bool QV4::Value::isString() const' used but never defined [-Werror] inline bool isString() const; ^ cc1plus: all warnings being treated as errors make[3]: *** [.obj/debug-shared/qv4regalloc.o] Error 1 make[3]: Leaving directory `/home/android-qt/qt5/qtdeclarative/src/qml' make[2]: *** [sub-qml-make_first-ordered] Error 2
Now isString() is defined in qtdeclarative/src/qml/jsruntime/qv4value_p.h (l.62).
But it's not clear to me what is the root cause or best solution to the error.
- relates to
-
QTBUG-34152 QML/V4: MinGW64 reports many warnings about potentially performance-relevant inlined functions not being visible at inlining time ( Value::isString(), QV4::Primitive::emptyValue() )
-
- Closed
-
| For Gerrit Dashboard: QTBUG-33998 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 67906,1 | Fix build on Android with -developer-build | stable | qt/qtdeclarative | Status: MERGED | +2 | 0 |